--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.8",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "typescript": "5.9.2"
